Update some texts

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Skills</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Discover my technical skills in full-stack development</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -193,7 +193,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <p class="text-muted">November 2023 - Present</p>
-                                <h4 class="subheading">IT Architecture Expert</h4>
+                                <h4 class="subheading">Preparing for IT Architecture Expert Certification(RNCP7)</h4>
                                 <h5>42 Lyon Auvergne-Rhône-Alpes</h5>
                             </div>
                             <div class="timeline-body">
