minor: Update minishell project descriptiom

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                                     <p>This project involved creating a dynamic shell in C, implementing features such as redirection, piping, signal handling, environment variable expansion, and essential builtins. It also focused on ensuring the shell was stable, with no segmentation faults or memory leaks.</p>
                                     <ul class="list-inline">
                                         <li><strong>Language:</strong> C</li>
-                                        <li><strong>Technologies:</strong> Shell scripting, Piping</li>
+                                        <li><strong>Technologies:</strong> Unix API, POSIX</li>
                                     </ul>
                                     <a class="btn btn-primary btn-xl text-uppercase" href="https://github.com/ysengoku/42-minishell" target="_blank">
                                         <i class="fab fa-github me-1"></i>
