feat: add ft_transcendence to the projects section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <i class="fas fa-code fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Back-end</h4>
-                        <p class="text-muted">Skilled in C and C++, with experience in multiple projects focused on building functional and efficient systems. Currently enhancing my skills with Django for Python-based web development.</p>
+                        <p class="text-muted">Skilled in C and C++, with experience in multiple projects focused on building functional and efficient systems. Currently enhancing my skills with Node.js.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -66,7 +66,7 @@
                             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Front-end & UX/UI Design</h4>
-                        <p class="text-muted">Experienced in front-end development with Bootstrap, JavaScript, and SwiftUI, focusing on creating intuitive user interfaces. Strong understanding of UX/UI principles to enhance user experience.</p>
+                        <p class="text-muted">Experienced in front-end development with JavaScript and SwiftUI, focusing on creating intuitive user interfaces. Strong understanding of UX/UI principles to enhance user experience.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -87,6 +87,21 @@
                     <h3 class="section-subheading text-muted">Explore my most recent projects and achievements.</h3>
                 </div>
                 <div class="row">
+                        <div class="col-lg-4 col-sm-6">
+                        <!-- Portfolio item 6-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/transcendence.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">ft_transcendence</div>
+                                <div class="portfolio-caption-subheading text-muted">Social gaming platform featuring Pong and live chat, built as a Single Page Application</div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <!-- Portfolio item 1-->
                         <div class="portfolio-item">
@@ -94,7 +109,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/irc.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">ft_irc</div>
@@ -162,9 +177,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
+                    <!-- <div class="col-lg-4 col-sm-6"> -->
                         <!-- Portfolio item 6-->
-                        <div class="portfolio-item">
+                        <!-- <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
@@ -176,7 +191,7 @@
                                 <div class="portfolio-caption-subheading text-muted">iOS application prototype</div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -447,7 +462,7 @@
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
-                                    <h2 class="text-uppercase">Mobilix</h2>
+                                    <!-- <h2 class="text-uppercase">Mobilix</h2>
                                     <p class="item-intro text-muted">First iOS app prototype developed as part of the Apple Foundation Program</p>
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpg" alt="..." />
                                     <p>Developed in a 4-person team during the Apple Foundation Program, Mobilix is an iOS app prototype designed to promote soft mobility. We implemented a system where users earn points by using partnered transportation services, with a map feature to locate and reserve available options nearby.</p>
@@ -458,6 +473,20 @@
                                     <a class="btn btn-primary btn-xl text-uppercase" href="https://github.com/ysengoku/iOSApp_AFP-Mobilix" target="_blank">
                                         <i class="fab fa-github me-1"></i>
                                         View on GitHub
+                                    </a> -->
+                                    <h2 class="text-uppercase">ft_transcendence</h2>
+                                    <p class="item-intro text-muted">Social gaming platform featuring Pong and live chat, built as a Single Page Application</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/transcendence.jpg" alt="..." />
+                                    <p>
+                                        Full-stack Single Page Application developed by a five-member team as part of the 42 curriculum, implementing a real-time social gaming platform with integrated live chat. It provides JWT/OAuth authentication, user profiles, game statistics, matchmaking, tournaments, and a complete multiplayer system. Built with vanilla JavaScript, Django, and PostgreSQL, containerized with docker-compose, and served over HTTPS. The Pong game is rendered with Three.js using custom Blender models, supporting both local and online modes with optional gameplay modifiers. The UI is responsive and includes dark/light themes.
+                                    </p>
+                                    <ul class="list-inline">
+                                        <li><strong>Language: </strong>JavaScript, Django/Python</li>
+                                        <li><strong>Technologies: </strong>Single Page Application, RESTful API, WebSocket, Docker, PostgreSQL</li>
+                                    </ul>
+                                    <a class="btn btn-primary btn-xl text-uppercase" href="https://github.com/ysengoku/42-ft_transcendence" target="_blank">
+                                        <i class="fab fa-github me-1"></i>
+                                        View on GitHub
                                     </a>
                                 </div>
                             </div>
@@ -466,6 +495,7 @@
                 </div>
             </div>
         </div>
+
         <!-- Bootstrap core JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS -->
