--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Yuko SENGOKU - Developper fullstack</title>
+    <title>Yuko SENGOKU - Fullstack Developper</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
