--- a/app/index.html
+++ b/app/index.html
@@ -7,9 +7,7 @@
     <meta name="author" content="" />
     <title>Yuko SENGOKU - Fullstack Developper</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="/img/navbar-logo.svg" />
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,700" rel="stylesheet" type="text/css" />
